@@ -186,7 +186,19 @@ var CloudCommander, Util, DOM;
                                 break;
                                 
                             case KEY.SPACE:
-                                DOM.selectFile(lCurrentFile);
+                                var lSelected   = DOM.isSelected(lCurrentFile),
+                                    lDir        = DOM.isCurrentIsDir(lCurrentFile);
+                                
+                                
+                                if(lDir)
+                                    Util.ifExec(lSelected, function(){
+                                        DOM.selectFile(lCurrentFile);
+                                    }, function(pCallBack){
+                                        DOM.loadCurrentSize(pCallBack, lCurrentFile);
+                                    });
+                                else
+                                    DOM.selectFile(lCurrentFile);
+                                
                                 DOM.preventDefault(pEvent);
                                 break;
                             
